# aiguibook

./: .gitattributes  .gitignore  Dockerfile  PODMAN.md  PROJECT_CONTEXT.md  README.md  default_config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test_book.epub.xhtml  test_nongpu.py
audiobook_ai/analysis/: __init__.py  character_analyzer.py
audiobook_ai/core/: config.py  text_segmenter.py
audiobook_ai/gui/: app.py
audiobook_ai/tts/: __init__.py  bark_engine.py  qwen_engine.py
devops/local-llm-text-analysis/: SKILL.md
tests/: test_pipeline.py
